# shortmovie-auto

./: .env.example  .gitignore  README.md  SPEC.md  TASKS.md  pyproject.toml
.claude/: settings.local.json
.claude/skills/api-key-setup/: SKILL.md
config/: config.yaml
src/: config.py  database.py  main.py
src/gui/: app.py  preview_panel.py  styles.py  video_list.py
src/pipeline/: asset_generator.py  metadata_generator.py  orchestrator.py  publisher.py  researcher.py  script_generator.py  trend_collector.py  video_composer.py
src/services/: ai_client.py  image_client.py  search_client.py  tts_client.py  twitter_client.py  youtube_client.py
src/utils/: ffmpeg_utils.py  image_utils.py  text_utils.py
